--- a/bus-math-nextjs/package.json
+++ b/bus-math-nextjs/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze-components": "node scripts/analyze-components.js"
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
